Fix spacing

--- a/src/styles/SectionBox.module.scss
+++ b/src/styles/SectionBox.module.scss
@@ -1,5 +1,6 @@
 .sectionBox {
   width: 100%;
+  padding: 25px 0;
   display: flex;
   justify-content: center;
 
