--- a/src/styles/Typography.module.scss
+++ b/src/styles/Typography.module.scss
@@ -5,6 +5,7 @@
   line-height: 1.5;
 
   h1 {
+    margin-top: 0;
     width: 100%;
     border: 1px solid #eaecef;
     border-radius: 10px;
